Improve notebook to include data operations on SV1 cards

--- a/data-card-analysis/TestDataCardCollection.ipynb
+++ b/data-card-analysis/TestDataCardCollection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "909a9ec2",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "b771f727",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "8670313a",
    "metadata": {},
    "outputs": [],
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "4836cfce",
    "metadata": {},
    "outputs": [
@@ -381,7 +381,7 @@
        "Name: rarity, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "54dcae18",
    "metadata": {},
    "outputs": [
@@ -438,7 +438,7 @@
        "Name: types, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "e424d0bd",
    "metadata": {},
    "outputs": [
@@ -959,7 +959,7 @@
        "Name: id, dtype: object"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "af4b3a5c",
    "metadata": {},
    "outputs": [
@@ -1926,7 +1926,7 @@
        "[25 rows x 26 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1937,7 +1937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "c30258f3",
    "metadata": {},
    "outputs": [
@@ -1948,7 +1948,7 @@
        "Name: id, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1959,7 +1959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "27573b2d",
    "metadata": {},
    "outputs": [
@@ -1971,7 +1971,7 @@
        "Name: id, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1982,7 +1982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "da7d879f",
    "metadata": {},
    "outputs": [
@@ -1992,7 +1992,7 @@
        "16"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2003,7 +2003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "id": "2b7ec207",
    "metadata": {
     "scrolled": true
@@ -2026,7 +2026,7 @@
        "Name: set, Length: 16109, dtype: object"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2037,7 +2037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "01ce0af8",
    "metadata": {},
    "outputs": [],
@@ -2047,7 +2047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "35cb44ef",
    "metadata": {},
    "outputs": [
@@ -2289,7 +2289,7 @@
        "[16109 rows x 10 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2300,28 +2300,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "05badc66",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "swshp    285\n",
-       "swsh8    284\n",
-       "sm12     272\n",
-       "sm11     261\n",
-       "sv1      258\n",
-       "        ... \n",
-       "mcd18     12\n",
-       "tk1b      10\n",
-       "tk1a      10\n",
-       "bp         9\n",
-       "fut20      5\n",
-       "Name: id, Length: 151, dtype: int64"
+       "swshp          285\n",
+       "swsh8          284\n",
+       "sm12           272\n",
+       "sm11           261\n",
+       "sv1            258\n",
+       "smp            251\n",
+       "sm8            240\n",
+       "sm10           238\n",
+       "swsh7          237\n",
+       "swsh6          233\n",
+       "swsh11         217\n",
+       "xyp            216\n",
+       "swsh10         216\n",
+       "swsh1          216\n",
+       "swsh12         215\n",
+       "swsh2          209\n",
+       "swsh4          203\n",
+       "swsh3          201\n",
+       "sm9            198\n",
+       "sm7            187\n",
+       "swsh9          186\n",
+       "swsh5          183\n",
+       "ecard3         182\n",
+       "ecard2         182\n",
+       "sm2            180\n",
+       "sm5            178\n",
+       "sm3            177\n",
+       "sm1            173\n",
+       "xy8            165\n",
+       "ecard1         165\n",
+       "xy5            164\n",
+       "swsh12pt5      160\n",
+       "bw7            153\n",
+       "pl3            153\n",
+       "sm6            150\n",
+       "dp6            146\n",
+       "xy1            146\n",
+       "ex10           145\n",
+       "bw11           140\n",
+       "bw8            138\n",
+       "pl1            133\n",
+       "gym2           132\n",
+       "gym1           132\n",
+       "dp3            132\n",
+       "dp1            130\n",
+       "base4          130\n",
+       "xy10           129\n",
+       "bw6            128\n",
+       "sm4            126\n",
+       "xy9            126\n",
+       "xy4            124\n",
+       "dp2            124\n",
+       "hgss1          124\n",
+       "swsh45sv       122\n",
+       "bw9            122\n",
+       "pl2            120\n",
+       "g1             117\n",
+       "xy11           116\n",
+       "ex6            116\n",
+       "bw1            115\n",
+       "xy3            114\n",
+       "ex11           114\n",
+       "neo4           113\n",
+       "xy12           113\n",
+       "xy6            112\n",
+       "neo1           111\n",
+       "ex7            111\n",
+       "pl4            111\n",
+       "ex13           111\n",
+       "bw5            111\n",
+       "base6          110\n",
+       "xy2            110\n",
+       "ex1            109\n",
+       "ex8            108\n",
+       "ex16           108\n",
+       "ex9            107\n",
+       "col1           106\n",
+       "dp7            106\n",
+       "dp4            106\n",
+       "bw10           105\n",
+       "hgss4          103\n",
+       "bw4            103\n",
+       "base1          102\n",
+       "ex5            102\n",
+       "bw3            102\n",
+       "ex15           101\n",
+       "xy7            101\n",
+       "bwp            101\n",
+       "dp5            100\n",
+       "ex3            100\n",
+       "ex2            100\n",
+       "ex14           100\n",
+       "bw2             98\n",
+       "ex4             97\n",
+       "hgss2           96\n",
+       "sma             94\n",
+       "ex12            93\n",
+       "hgss3           91\n",
+       "pgo             88\n",
+       "base5           83\n",
+       "sm35            81\n",
+       "sm75            80\n",
+       "swsh35          80\n",
+       "neo2            75\n",
+       "swsh45          73\n",
+       "swsh12pt5gg     70\n",
+       "sm115           69\n",
+       "neo3            66\n",
+       "base2           64\n",
+       "base3           62\n",
+       "dpp             56\n",
+       "basep           53\n",
+       "np              40\n",
+       "xy0             39\n",
+       "dc1             34\n",
+       "swsh12tg        30\n",
+       "swsh11tg        30\n",
+       "swsh10tg        30\n",
+       "swsh9tg         30\n",
+       "mcd21           25\n",
+       "hsp             25\n",
+       "cel25           25\n",
+       "cel25c          25\n",
+       "dv1             21\n",
+       "det1            18\n",
+       "si1             18\n",
+       "pop3            17\n",
+       "pop2            17\n",
+       "pop9            17\n",
+       "pop8            17\n",
+       "pop1            17\n",
+       "pop4            17\n",
+       "pop5            17\n",
+       "pop6            17\n",
+       "pop7            17\n",
+       "ru1             16\n",
+       "mcd22           15\n",
+       "tk2a            12\n",
+       "tk2b            12\n",
+       "mcd14           12\n",
+       "mcd17           12\n",
+       "mcd16           12\n",
+       "mcd11           12\n",
+       "mcd19           12\n",
+       "mcd12           12\n",
+       "mcd15           12\n",
+       "mcd18           12\n",
+       "tk1b            10\n",
+       "tk1a            10\n",
+       "bp               9\n",
+       "fut20            5\n",
+       "Name: id, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2332,8 +2472,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "f398d6d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sv_cards_frame = data_frame_cards.loc[data_frame_cards[\"id\"].str.contains(\"sv1\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "f0a11d43",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Common                       105\n",
+       "Uncommon                      60\n",
+       "Illustration Rare             24\n",
+       "Rare                          21\n",
+       "Ultra Rare                    20\n",
+       "Double Rare                   12\n",
+       "Special Illustration Rare     10\n",
+       "Hyper Rare                     6\n",
+       "Name: rarity, dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sv_cards_frame[\"rarity\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "c39aab73",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16063    sv1-223\n",
+       "16074    sv1-225\n",
+       "16075    sv1-226\n",
+       "16076    sv1-224\n",
+       "16077    sv1-227\n",
+       "16078    sv1-228\n",
+       "16079    sv1-229\n",
+       "16080    sv1-230\n",
+       "16081    sv1-231\n",
+       "16082    sv1-232\n",
+       "16083    sv1-233\n",
+       "16084    sv1-234\n",
+       "16085    sv1-235\n",
+       "16086    sv1-236\n",
+       "16087    sv1-237\n",
+       "16088    sv1-238\n",
+       "16089    sv1-239\n",
+       "16090    sv1-240\n",
+       "16091    sv1-241\n",
+       "16092    sv1-242\n",
+       "Name: id, dtype: object"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sv_cards_frame.loc[data_frame_cards[\"rarity\"] == \"Ultra Rare\"][\"id\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bff01b55",
    "metadata": {},
    "outputs": [],
    "source": []
