Adapt simulation of booster openings according to new set service dependency to booster service

--- a/data-card-analysis/TestDataCardCollection.ipynb
+++ b/data-card-analysis/TestDataCardCollection.ipynb
@@ -7306,8 +7306,115 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "id": "7fa101de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 16109 entries, 0 to 16108\n",
+      "Data columns (total 26 columns):\n",
+      " #   Column                  Non-Null Count  Dtype  \n",
+      "---  ------                  --------------  -----  \n",
+      " 0   abilities               3224 non-null   object \n",
+      " 1   artist                  15912 non-null  object \n",
+      " 2   ancientTrait            59 non-null     object \n",
+      " 3   attacks                 13580 non-null  object \n",
+      " 4   cardmarket              15892 non-null  object \n",
+      " 5   convertedRetreatCost    12798 non-null  float64\n",
+      " 6   evolvesFrom             5753 non-null   object \n",
+      " 7   flavorText              8735 non-null   object \n",
+      " 8   hp                      13607 non-null  object \n",
+      " 9   id                      16109 non-null  object \n",
+      " 10  images                  16109 non-null  object \n",
+      " 11  legalities              16109 non-null  object \n",
+      " 12  regulationMark          3867 non-null   object \n",
+      " 13  name                    16109 non-null  object \n",
+      " 14  nationalPokedexNumbers  13571 non-null  object \n",
+      " 15  number                  16109 non-null  object \n",
+      " 16  rarity                  15814 non-null  object \n",
+      " 17  resistances             4095 non-null   object \n",
+      " 18  retreatCost             12798 non-null  object \n",
+      " 19  rules                   4884 non-null   object \n",
+      " 20  set                     16109 non-null  object \n",
+      " 21  subtypes                15905 non-null  object \n",
+      " 22  supertype               16109 non-null  object \n",
+      " 23  tcgplayer               15887 non-null  object \n",
+      " 24  types                   13572 non-null  object \n",
+      " 25  weaknesses              13185 non-null  object \n",
+      "dtypes: float64(1), object(25)\n",
+      "memory usage: 3.2+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_frame_cards.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "5b6740c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Water]                  1947\n",
+       "[Grass]                  1888\n",
+       "[Psychic]                1825\n",
+       "[Colorless]              1756\n",
+       "[Fighting]               1454\n",
+       "[Fire]                   1201\n",
+       "[Lightning]              1183\n",
+       "[Darkness]                859\n",
+       "[Metal]                   705\n",
+       "[Dragon]                  417\n",
+       "[Fairy]                   234\n",
+       "[Grass, Darkness]          10\n",
+       "[Lightning, Metal]          9\n",
+       "[Fighting, Darkness]        9\n",
+       "[Darkness, Metal]           7\n",
+       "[Water, Metal]              7\n",
+       "[Water, Darkness]           7\n",
+       "[Fire, Metal]               6\n",
+       "[Psychic, Metal]            5\n",
+       "[Fire, Darkness]            5\n",
+       "[Lightning, Darkness]       5\n",
+       "[Fighting, Metal]           4\n",
+       "[Fire, Water]               4\n",
+       "[Psychic, Darkness]         3\n",
+       "[Grass, Metal]              3\n",
+       "[Darkness, Psychic]         2\n",
+       "[Metal, Fighting]           2\n",
+       "[Water, Fire]               2\n",
+       "[Colorless, Psychic]        2\n",
+       "[Water, Fighting]           2\n",
+       "[Lightning, Water]          2\n",
+       "[Fire, Lightning]           2\n",
+       "[Fairy, Psychic]            2\n",
+       "[Fire, Grass]               1\n",
+       "[Lightning, Grass]          1\n",
+       "[Fairy, Water]              1\n",
+       "Name: types, dtype: int64"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_frame_cards[\"types\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "381d8e7b",
+   "id": "447dabe9",
    "metadata": {},
    "outputs": [],
    "source": []
